mdapi/Custom/objects/Property_Issues__c.object
<CustomObject>
    <description>This is a object that can be used for the field to define any issues (things that are so disparate we couldn&apos;t possibly list them all in a picklist) and assign a person responsible to address the problem.  We have opted for this object instead of tasks as it provides easier reporting and visibility on the parent object (portfolio.)</description>
    <fields>
        <fullName>Alert_Comments__c</fullName>
        <label>Alert Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Alert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_By__c</fullName>
        <description>This field automatically populate with the name of the user who populates the &quot;Assigned to&quot; field</description>
        <label>Assigned By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Escalated Resident Issues, this field is populated via the &quot;Assign to VP&quot; button.</description>
        <inlineHelpText>Upon entering a name in this field and saving the record, an email will be sent to the person letting them know they&apos;ve been assigned to the Issue.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Other__c</fullName>
        <label>Category - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Web_Submission__c</fullName>
        <label>Category (Web Submission)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Topic__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Application Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Deposit Funds</fullName>
                </value>
                <value>
                    <fullName>Employment Verification</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Move-Out Instructions</fullName>
                </value>
                <value>
                    <fullName>Neighbor Inquiry</fullName>
                </value>
                <value>
                    <fullName>Notice to Vacate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pet Policy</fullName>
                </value>
                <value>
                    <fullName>Qualification Requirements</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Rental Verification</fullName>
                </value>
                <value>
                    <fullName>Section 8</fullName>
                </value>
                <value>
                    <fullName>Showing Scheduling</fullName>
                </value>
                <value>
                    <fullName>Technical Issues (Portal Support)</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Vendor Inquiry</fullName>
                </value>
                <value>
                    <fullName>Violation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Web_Submission__c</fullName>
        <label>City (Web Submission)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Reason_Notes__c</fullName>
        <inlineHelpText>Use this field for your Resolution or Cancellation Notes</inlineHelpText>
        <label>Resolution Notes</label>
        <length>13000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compensation__c</fullName>
        <label>Compensation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Type__c</fullName>
        <label>Complaint Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Complaint - Section 8</fullName>
                </value>
                <value>
                    <fullName>Complaint - BBB</fullName>
                </value>
                <value>
                    <fullName>Question or Inquiry</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Resident__c</fullName>
        <label>Current Resident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Care_Concern__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this issue is related to our Service</inlineHelpText>
        <label>Customer Care Concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Damage_Comments__c</fullName>
        <description>Please describe any damage.</description>
        <inlineHelpText>Please describe any damage.</inlineHelpText>
        <label>Damage Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Damage_Condition__c</fullName>
        <description>NO DAMAGE
MINOR DAMAGE - minor water staining, no drywall/base removal required, minor touch up paint required, minor landscape damage
MODERATE DAMAGE - 1 room of carpet/pad/base, less than 100sf of drywall, moderate paint damage, minor damage to roof, siding/stucco and/or windows, moderate landscape damage
MAJOR DAMAGE - multiple rooms of carpet/pad/base, more than 100sf of drywall, structural, HVAC, electrical &amp; plumbing damage, major damage to roof, home exterior and windows</description>
        <label>Damage Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NO DAMAGE</fullName>
                </value>
                <value>
                    <fullName>MINOR DAMAGE</fullName>
                </value>
                <value>
                    <fullName>MODERATE DAMAGE</fullName>
                </value>
                <value>
                    <fullName>MAJOR DAMAGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_Notified__c</fullName>
        <inlineHelpText>This field is automatically populated when a name is entered in the Assigned To field.  In addition, that person will receive an email letting them know they&apos;ve been assigned to the Issue.</inlineHelpText>
        <label>Date/Time Notified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Rcv_d__c</fullName>
        <label>Date/Time Rcv&apos;d</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Re_Assigned__c</fullName>
        <inlineHelpText>This date auto-populates when &quot;Assigned To&quot; is changed.</inlineHelpText>
        <label>Date/Time Re-Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &apos;New&apos;) , (TODAY()-DATEVALUE(CreatedDate)), 
IF( ISPICKVAL( Status__c , &apos;Open&apos;) , (TODAY()-DATEVALUE(CreatedDate)), 
IF( ISPICKVAL( Status__c , &apos;In Process&apos;) , (TODAY()-DATEVALUE(CreatedDate)), 
IF( ISPICKVAL( Status__c , &apos;Contacted&apos;) , (TODAY()-DATEVALUE(CreatedDate)), 
IF( ISPICKVAL( Status__c , &apos;LVM 1&apos;) , (TODAY()-DATEVALUE(CreatedDate)), 
IF( ISPICKVAL( Status__c , &apos;LVM 2&apos;) , (TODAY()-DATEVALUE(CreatedDate)), 
(Closed_Date__c - DATEVALUE(CreatedDate)))))) )  )</formula>
        <label># of Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Mgr_Comments__c</fullName>
        <inlineHelpText>Any comments typed in this field will update the Assigned To Representative via email.</inlineHelpText>
        <label>Department Mgr. Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division_President__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use only with Escalated Resident Issues (BH/IH).  This field is populated via the &quot;Assign to VP&quot; button.</description>
        <label>Division President</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exterior_Envelope_Comments__c</fullName>
        <description>If the envelope is compromised, please provide details.</description>
        <inlineHelpText>If the envelope is compromised, please provide details.</inlineHelpText>
        <label>Exterior Envelope Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exterior_Envelope_Compromised__c</fullName>
        <description>Is the exterior envelope of the home compromised? (Hole in roof, etc.) *</description>
        <inlineHelpText>Is the exterior envelope of the home compromised? (Hole in roof, etc.) *</inlineHelpText>
        <label>Exterior Envelope Compromised ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Secured__c</fullName>
        <description>Is the home secured (windows &amp; doors intact and lockable)?</description>
        <inlineHelpText>Is the home secured (windows &amp; doors intact and lockable)?</inlineHelpText>
        <label>Home Secured ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_not_Secured_Comments__c</fullName>
        <description>If the home is not secured, please explain.</description>
        <inlineHelpText>If the home is not secured, please explain.</inlineHelpText>
        <label>Home not Secured Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interior_Comments__c</fullName>
        <label>Interior Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interior_Condition__c</fullName>
        <label>Interior Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <label>Issue Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Origination__c</fullName>
        <label>Issue Origination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Maintenance Survey</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Yardi Call Center</fullName>
                </value>
                <value>
                    <fullName>CS/Info</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
                <value>
                    <fullName>Google Review</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Move In Survey</fullName>
                </value>
                <value>
                    <fullName>Work Order Survey</fullName>
                </value>
                <value>
                    <fullName>Pre Renewal Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landscape_Comments__c</fullName>
        <label>Landscape Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Landscape_Condition__c</fullName>
        <label>Landscape Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Lease__r.Lease_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_From_Date__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Lease__r.Lease_From_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message_Details__c</fullName>
        <label>Message Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nature_of_Issue__c</fullName>
        <inlineHelpText>Typically Leasing, Maintenance, Resident Payment, Rent/Deposits, Neighbor Complaint, Web Site, Utilities, HOA, or Other.</inlineHelpText>
        <label>Nature of Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Fees</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Eviction</fullName>
                </value>
                <value>
                    <fullName>HOA</fullName>
                </value>
                <value>
                    <fullName>Late Notice</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Neighbor - Complaint</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Rent Portal/ACH</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want to send an automatic email to the person assigned to this issue.  The email will include the property number, property address and the details about the property issue.</inlineHelpText>
        <label>Notify Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <formula>Portfolio__r.Owner:User.Full_Name__c</formula>
        <label>PM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pet_Description__c</fullName>
        <label>Pet Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pet_Quantity__c</fullName>
        <label>Pet Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Rent_Verified__c</fullName>
        <label>Pet Rent Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pipeline</label>
        <referenceTo>Property_Opportunity__c</referenceTo>
        <relationshipLabel>Property Issues</relationshipLabel>
        <relationshipName>Property_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Property Issues</relationshipLabel>
        <relationshipName>Issue_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Web_Submission__c</fullName>
        <label>Postal Code (Web Submission)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>IF(NOT(ISBLANK( Pipeline__c )) , Pipeline__r.Property_Street__c, 
IF(NOT(ISBLANK( Portfolio__c )) , Portfolio__r.Property_Street__c , 
IF( Web_Submission__c = TRUE, Street_Address_Web_Submission__c , 
null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>IF(NOT(ISBLANK( Pipeline__c )) , Pipeline__r.Property_City__c , 
IF(NOT(ISBLANK( Portfolio__c )) , Portfolio__r.Property_City__c , 
IF( Web_Submission__c = TRUE, City_Web_Submission__c , 
null )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property  City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Cross_Streets__c</fullName>
        <formula>IF(NOT(ISBLANK( Pipeline__c )) , Pipeline__r.Property_Cross_Streets__c , 
IF(NOT(ISBLANK( Portfolio__c )) , Portfolio__r.Property_Cross_Streets__c , 
null ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Cross Streets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>IF(NOT(ISBLANK( Pipeline__c )) , Pipeline__r.Property_State__c , 
IF(NOT(ISBLANK( Portfolio__c )) , Portfolio__r.Property_State__c , 
IF( Web_Submission__c = TRUE, TEXT(State_Web_Submission__c) , 
null )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property  State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <formula>IF(NOT(ISBLANK( Pipeline__c )) , Pipeline__r.Property_Zip_Code__c , 
IF(NOT(ISBLANK( Portfolio__c )) , Portfolio__r.Property_Zip_Code__c , 
IF( Web_Submission__c = TRUE, Postal_Code_Web_Submission__c , 
null )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(NOT(ISBLANK( Residence__c )) , TEXT(Residence__r.Region__c), 
IF(NOT(ISBLANK( Pipeline__c )) , TEXT(Pipeline__r.Region__c) , 
IF(NOT(ISBLANK( Portfolio__c )) , TEXT(Portfolio__r.Region__c) , 
IF( Web_Submission__c = TRUE, TEXT(What_Region_does_issue_Impact__c) , 
null ))))</formula>
        <label>Market2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use only with Escalated Resident Issues (BH/IH).</description>
        <inlineHelpText>If there is another Property Issue that is related to this one, associate it here.</inlineHelpText>
        <label>Related Issue</label>
        <referenceTo>Property_Issues__c</referenceTo>
        <relationshipLabel>Property Issues</relationshipLabel>
        <relationshipName>Property_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Inc_New_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rent Inc/New Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residence</label>
        <referenceTo>Residence__c</referenceTo>
        <relationshipLabel>Property Issues</relationshipLabel>
        <relationshipName>Property_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resident_Name__c</fullName>
        <label>Resident Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Web_Submission__c</fullName>
        <label>State (Web Submission)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>California - Los Angeles Area</fullName>
                </value>
                <value>
                    <fullName>California - Inland Empire Area</fullName>
                </value>
                <value>
                    <fullName>California - Northern</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida - Northern</fullName>
                </value>
                <value>
                    <fullName>Florida - Orlando Area</fullName>
                </value>
                <value>
                    <fullName>Florida - Tampa Area</fullName>
                </value>
                <value>
                    <fullName>Florida - Southern</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>LVM 1</fullName>
                </value>
                <value>
                    <fullName>LVM 2</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed (Never Connected)</fullName>
                </value>
                <value>
                    <fullName>Closed (Resolved)</fullName>
                </value>
                <value>
                    <fullName>Closed (Cancelled)</fullName>
                </value>
                <value>
                    <fullName>Closed (Not Identifiable)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address_2_Web_Submission__c</fullName>
        <label>Street Address 2 (Web Submission)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Web_Submission__c</fullName>
        <label>Street Address (Web Submission)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <inlineHelpText>This is (1) the name of the person who submitted the issue via the web, or (2) the name of the tenant who is having the issue.</inlineHelpText>
        <label>Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Type__c</fullName>
        <inlineHelpText>Typically Resident, Applicant, Other, or blank.</inlineHelpText>
        <label>Submitter Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_Department_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary Department Mgr or Director that is supporting the Assigned To Representative in Closing out this complaint.</inlineHelpText>
        <label>Supporting Department Mgr.</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_To_Assign__c</fullName>
        <formula>( Date_Time_Notified__c - Date_Time_Rcv_d__c ) *24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time To Assign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Current Residents</fullName>
                </value>
                <value>
                    <fullName>Other Inquiries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utilities_Comments__c</fullName>
        <description>Please provide any additional, applicable information regarding utilities.</description>
        <inlineHelpText>Please provide any additional, applicable information regarding utilities.</inlineHelpText>
        <label>Utilities Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>